src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of Merchandise</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notebooks</fullName>
                    <default>true</default>
                    <label>Notebooks</label>
                </value>
                <value>
                    <fullName>Monitors</fullName>
                </value>
                <value>
                    <fullName>Keyboards</fullName>
                </value>
                <value>
                    <fullName>Mouses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item_Total__c</fullName>
        <label>Invoice Line Item Total</label>
        <summarizedField>Invoice_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Merchandise__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>Picture of Merchandise</description>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Quantity__c</columns>
        <columns>Price__c</columns>
        <columns>Invoice_Line_Item_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>